비밀번호 설정 화면
activity_setting.xml
설정 화면(2016-08-16 완료)

SettingActivity.java
잠금해제 버튼 클릭시 이미지 변경(2016-08-16 완료)

activity_password_change.xml
비밀번호 변경 화면(2016-08-16 완료)

PasswordChangeActivity.java
번호 클릭 구현(2016-08-16 완료)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,13 @@
         <activity
             android:name=".Activity.Activity.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Activity.Activity.LockScreenActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.Activity.SettingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,6 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Activity.Activity.PasswordChangeActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
