비밀번호 찾기
LockScreenActivity.java
비밀번호 찾기 클릭 시 이메일 보내기(2016-08-17 완료)

activity_email_change.xml
이메일 변경 화면 구성(2016-08-17 완료)

EmailChangeActivity.java
기능 구현 (2016-08-17 완료)
뒤로가기 버튼 클릭시 종료 구현(2016-08-17 완료)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.diallock.diallock.diallock">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/dial_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -28,6 +32,10 @@
         </activity>
         <activity
             android:name=".Activity.Activity.PasswordChangeActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.Activity.EmailChangeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
