--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/dial_icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:sharedUserId="android.uid.system"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
