--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
     compile 'net.sourceforge.jexcelapi:jxl:2.6.12'
+    compile 'com.facebook.fresco:fresco:0.14.1'
 }
